--- a/static/index.html
+++ b/static/index.html
@@ -19,11 +19,18 @@
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
 		<div>
-			<h1>Scott Klemmer</h1>
-			<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
+			<h1>David Gallardo</h1>
+			<p>Human-Computer Interaction </p>
 		</div>
 
-
+		<div>
+			<h4>Skills</h4>
+			<ul>
+				<li>Java</li>
+				<li>HTML, CSS, JS</li>
+				<li>Python</li>
+			</ul>
+		</div>
 		<h4>Projects</h4>
 		<!-- divs are invisible structuring elements that stack vertically by default. Use them to organize your code -->
 		<!-- img tags are images. Lorem Pixel will deliver random images; handy! -->
